--- a/portfolio.css
+++ b/portfolio.css
@@ -10,4 +10,9 @@
   left: 0px;
 }
 
+.button-container {
+  display: flex;
+  justify-content: space-around;
+}
+
 /*# sourceMappingURL=portfolio.css.map */
