--- a/portfolio.scss
+++ b/portfolio.scss
@@ -1,8 +1,13 @@
 .carousel {
+  border: solid blue 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 640px;
   height: 600px;
   position: relative;
   overflow: hidden;
+  margin: auto;
   .images-container {
     position: absolute;
     display: flex;
@@ -10,6 +15,10 @@
   }
 }
 .button-container {
+  border: solid red 2px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  button {
+    font-size: 3rem;
+  }
 }
