--- a/portfolio.scss
+++ b/portfolio.scss
@@ -1,3 +1,8 @@
+#id-project-display {
+  border: solid green 2px;
+  padding: auto;
+  font-size: 3rem;
+}
 .carousel {
   border: solid blue 2px;
   display: flex;
